--- a/frontend/src/styles/ProfileDropdown.css
+++ b/frontend/src/styles/ProfileDropdown.css
@@ -11,7 +11,7 @@
 
 .edit {
   margin-top: 15px;
-  padding: 5 5;
+  padding: 5px 5px;
   background-color: #3D518C;
   color: white;
   border: none;
@@ -68,4 +68,29 @@
 
 .badge-container:hover .badge-hover-info {
   display: block;
+}
+
+/* CSS for Profile Pic Selection */
+.profile-pic-selection {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+
+.selectable-pic {
+  width: 50px; 
+  height: 50px; 
+  object-fit: cover;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.selectable-pic:hover {
+  transform: scale(1.1);
+}
+
+.selectable-pic.selected {
+  border: 2px solid #3D518C;
 }
